--- a/_posts/2022-03-10-AND THEN E01.markdown
+++ b/_posts/2022-03-10-AND THEN E01.markdown
@@ -6,9 +6,9 @@ image: "book.jpg"
 ---
 
 ```
-Then they want to burn you.<br>
 First they ignore you.<br>
 Then they ridicule you.<br>
+Then they want to burn you.<br>
 And then they build monuments to you
 ```
 
@@ -84,8 +84,7 @@ At this point, the pilot would have drifted off and started unloading cargo with
 
 “That’s what they tell me,” she said. So that’s what the look had been about. Perhaps he thought she would be taller.
 
-<h2>
-Slowly but Surely</h2>
+<h2>Slowly but Surely</h2>
 
 
 Sammie looked around the ship as she entered. An anachronistic wood veneer cabin encompassed ten seats with crash webbing, which were bisected by an aisle that led back to the cargo bay. At the front were the high bandwidth interface pilot seats. It had a warmth to it that she did not expect. 
@@ -208,7 +207,7 @@ They had a long talk about what looked like their struggle with decentralization
 
 After a few weeks Sammie got tired of being a RADICAL celebrity and she accepted the invitation to go to the Chicago Pod in what used to be the United States of America. The electric jet went up to the edge of the biosphere, although she would not call that “space” as they did throughout the trip. It was a lot shorter than her trip from the Karala Pod to the Beijing Pod. It was also boring and she slept for most of it.
 
-<h2>References</h2>
+<h2>Related</h2>
 
 
 
