--- a/_posts/2022-03-10-AND THEN E01.markdown
+++ b/_posts/2022-03-10-AND THEN E01.markdown
@@ -6,8 +6,8 @@ image: "book.jpg"
 ---
 
 ```
-First they ignore you.
-Then they ridicule you.
+First they ignore you. <br>
+Then they ridicule you. <br>
 Then they want to burn you.<br>
 And then they build monuments to you
 ```
