--- a/_posts/2022-03-10-AND THEN E01.markdown
+++ b/_posts/2022-03-10-AND THEN E01.markdown
@@ -5,11 +5,12 @@ authors: "Matt Perez"
 image: "book.jpg"
 ---
 
+<div style:"display: none;">BREAKING: First child be born in space. Every country around the world claims her as a native: happy little Sammie is the the first of Earth!</div>
 ```
-First they ignore you.&nbsp;
-Then they want to burn you.&nbsp;
-Then they ridicule you.&nbsp;
-And then they build monuments to you
+First they ignore you.
+ Then they want to burn you.
+ Then they ridicule you.
+ And then they build monuments to you
 ```
 
 <h2>Episode 01 – FIRST OF EARTH</h2>
