--- a/_posts/2022-03-10-AND THEN E01.markdown
+++ b/_posts/2022-03-10-AND THEN E01.markdown
@@ -5,7 +5,7 @@ authors: "Matt Perez"
 image: "book.jpg"
 ---
 
-<div style:"display: none;">BREAKING: First child be born in space. Every country around the world claims her as a native: happy little Sammie is the the first of Earth!</div>
+<div style="display: none;">BREAKING: First child be born in space. Every country around the world claims her as a native: happy little Sammie is the the first of Earth!</div>
 ```
 First they ignore you.
  Then they want to burn you.
