--- a/_posts/2022-03-10-AND THEN E01.markdown
+++ b/_posts/2022-03-10-AND THEN E01.markdown
@@ -13,7 +13,7 @@ Then they ridicule you.
 And then they build monuments to you
 ```
 
-<h2>Episode 01 – FIRST OF EARTH</h2>
+<h2>FIRST OF EARTH (E01)</h2>
 
 
 **<strong><code>SAT 16 NOV 2030.</code></strong> It came sooner than expected, though not as a complete surprise. It was a great offer for the company we had founded and contributed to for eleven years. This was proof that creating a place where every contributor is treated as an adult and everyone of them is a co-owner of what they’ve created together leads to a wildly successful business as well.
