--- a/_posts/2022-03-10-AND THEN E01.markdown
+++ b/_posts/2022-03-10-AND THEN E01.markdown
@@ -10,12 +10,12 @@ image: "book.jpg"
 <br>
 <br>
 <br>
-<blockquote>
+<pre style="font-size:40ps; border:1px">
 First they ignore you.
 Then they want to burn you.
 Then they ridicule you.
 And then they build monuments to you
-</blockquote>
+</div>
 ```
 
 <h2>FIRST OF EARTH (E01)</h2>
