--- a/_posts/2022-03-10-AND THEN E01.markdown
+++ b/_posts/2022-03-10-AND THEN E01.markdown
@@ -5,7 +5,13 @@ authors: "Matt Perez"
 image: "book.jpg"
 ---
 
-<div style="display: none;">BREAKING: First child be born in space. Every country around the world claims the First of Earth as a native.</div>
+<div style="display: none;">BREAKING: First child be born in space. Every country around the world claims the First of Earth as a native.
+<br>
+<br>
+<br>
+<br>
+<br>
+</div>
 
 <div style="font-size:40ps; border:1px">
 First they ignore you.
