--- a/_posts/2022-03-10-AND THEN E01.markdown
+++ b/_posts/2022-03-10-AND THEN E01.markdown
@@ -5,6 +5,7 @@ authors: "Matt Perez"
 image: "book.jpg"
 ---
 
+xxxx
 <div style="display: none;">BREAKING: First child be born in space. Every country around the world claims the First of Earth as a native.
 <br>
 <br>
@@ -12,6 +13,7 @@ image: "book.jpg"
 <br>
 <br>
 </div>
+xxxx
 
 ...
 First they ignore you.
