Added title to body

--- a/_posts/2022-03-02-E04-A Fear Fest.markdown
+++ b/_posts/2022-03-02-E04-A Fear Fest.markdown
@@ -18,7 +18,7 @@ And then they build monuments to you</pre>
 <br>
 <br>
 
-<h2>A FEAR FEST</h2>
+<h1 style="text-align: center;">A FEAR FEST</h1>
 <p>
 After the Big Nothing people were openly fearful and they were quieter than
 usual, afraid to speak up. They weren’t helping each other to get over it, and,
