--- a/_posts/rFiction/First of Earth/2022-03-02-E04-A Fear Fest.markdown
+++ b/_posts/rFiction/First of Earth/2022-03-02-E04-A Fear Fest.markdown
@@ -1,7 +1,7 @@
 ---
 layout:   post
-title:    "AND THEN THEY WANT TO BURN YOU"
-subtitle: "EPISODE 04 – A Fear Fest"
+title:    "A Fear Fest"
+subtitle: "AND THEN THEY WANT TO BURN YOU — E04"
 authors:  "Matt Perez & Adrian Perez"
 image:    "and-then-e04.png"
 ---
