--- a/_posts/rFiction/First of Earth/2022-03-02-E04-A Fear Fest.markdown
+++ b/_posts/rFiction/First of Earth/2022-03-02-E04-A Fear Fest.markdown
@@ -52,20 +52,20 @@ image:    "and-then-e04.png"
  <p>The next question for Sammie was how to test Kiki’s hypothesis. And next after that, how could she use it to thwart Vic and his mob. Not clear that it would be useful for that, but she had to find out.</p>
  <p>Before Sammie could figure out how to test it, Kiki did and she let Sammie know that the whispers were related to the neuromorphics. Kiki didn’t have to say it, but Sammie knew that Kiki was now on the trail and would keep digging. So, she could focus if this could be used to at least slow Vic down.</p>
 
-<div>
- <span style="text-align:right; font-family: American Typewriter, serif; text-align:left; "><a href="">Previous <</a></span><span style="text-align:right; font-family: American Typewriter, serif; text-align:right; "><a href="https://radicalcompanies.com/2022/03/02/E04-A-Fear-Fest.html">> Next</a></span>
+<div style="margin-bottom:1in; width:80%; padding:0 10%; font-family: American Typewriter, serif; ">
+ <span style="float:left; "><a href="">Previous <</a></span>
+ <span style="float:right; "><a href="https://radicalcompanies.com/2022/03/02/e04-a-fear-fest">> Next</a></span>
 </div>
 
-<h2 style="margin-top:0.5in; ">FURTHER READING</h2>
+<h2 style="margin-top:1in; ">FURTHER READING</h2>
 <ul>
-  <li><a href="">The Hidden Masters – Notes</a></li>
+  <li><a>The Hidden Masters – Notes</a></li>
   <li><a href="https://en.wikipedia.org/wiki/Moons_of_Jupiter">Moons of Jupiter</a></li>
-  <li><a href="https://www.sciencemagazinedigital.org/sciencemagazine/18_december_2020/MobilePagedArticle.action?articleId=1646790&app=false#articleId1646790">A gatekeeper for learning</a> (see <a href="">AnchorMod</a>)</li>
-  <li><a href="">Narrative Arc</a></li>
-  <li><a href="">Future Tech and Culture</a></li>
-  <li><a href="">Resources</a></li>
-  <li><a href="">Notes</a></li>
-</ul>
+  <li><a href="https://www.sciencemagazinedigital.org/sciencemagazine/18_december_2020/MobilePagedArticle.action?articleId=1646790&app=false#articleId1646790">A gatekeeper for learning</a> (see <a>AnchorMod</a>)</li>
+  <li><a>Narrative Arc</a></li>
+  <li><a>Future Tech and Culture</a></li>
+  <li><a>Resources</a></li>
+  <li><a>Notes</a></li>
 
 <h2 style="margin-top:0.5in; ">RELATED</h2>
  <ul>
