--- a/_posts/rFiction/First of Earth/2022-03-04-E04-a-fear-fest.markdown
+++ b/_posts/rFiction/First of Earth/2022-03-04-E04-a-fear-fest.markdown
@@ -3,6 +3,7 @@ layout:   post title:    "A Fear Fest"
 subtitle: "AND THEN THEY WANT TO BURN YOU — E04"
 authors:  "Matt Perez & Adrian Perez"
 image:    "and-then-e04.png"
+unlisted: true
 ---
 
 <div style="display: none;">
@@ -52,8 +53,8 @@ image:    "and-then-e04.png"
  <p>Before Sammie could figure out how to test it, Kiki did and she let Sammie know that the whispers were related to the neuromorphics. Kiki didn&rsquo;t have to say it, but Sammie knew that Kiki was now on the trail and would keep digging. So, she could focus if this could be used to at least slow Vic down.</p>
 
 <div style="margin-bottom:1in; width:80%; padding:0 10%; font-family: American Typewriter, serif; ">
- <span style="float:left; "><a href="E03-give-him-back">< Previous</a></span>
- <span style="float:right; "><a href="E05-my-baby-wrote-me-a-letter">Next ></a></span>
+ <span style="float:left; "><a href="../E03-give-him-back">< Previous</a></span>
+ <span style="float:right; "><a href="../E05-my-baby-wrote-me-a-letter">Next ></a></span>
 </div>
 
 <h2 style="margin-top:1in; ">FURTHER READING</h1>
