--- a/_posts/rFiction/The FIAT Enclaves/2022-03-12-E12-different.markdown
+++ b/_posts/rFiction/The FIAT Enclaves/2022-03-12-E12-different.markdown
@@ -3,6 +3,7 @@ layout:   post title:    "Different"
 subtitle: "AND THEN THEY WANT TO BURN YOU — E12"
 authors:  "Matt Perez"
 image:    "and-then-e12.png"
+unlisted: true
 ---
 
 <div style="display: none;">
@@ -162,7 +163,7 @@ image:    "and-then-e12.png"
 
 <div style="margin-bottom:1in; width:80%; padding:0 10%; font-family: American Typewriter, serif; ">
  <span style="float:left; "><a href="https://radicalcompanies.com/2022-03-09-E11-the-fiat-enclaves">Previous <</a></span>
- <span style="float:right; "><a href="https://radicalcompanies.com/E13-giving-back">> Next</a></span>
+ <span style="float:right; "><a href="../E13-giving-back">> Next</a></span>
 </div>
 
 <h1 style="font-size:50px; font-family:Courier New, monospace; text-align:center; margin: 60 0 20 0; ">FURTHER READING</h1>
