--- a/_posts/rFiction/First of Earth/2022-03-04-E04-a-fear-fest.markdown
+++ b/_posts/rFiction/First of Earth/2022-03-04-E04-a-fear-fest.markdown
@@ -1,5 +1,6 @@
 ---
-layout:   post title:    "A Fear Fest"
+layout:   post
+title:    "A Fear Fest"
 subtitle: "AND THEN THEY WANT TO BURN YOU — E04"
 authors:  "Matt Perez & Adrian Perez"
 image:    "and-then-e04.png"
