--- a/_posts/rFiction/The FIAT Enclaves/2022-03-12-E12-different.markdown
+++ b/_posts/rFiction/The FIAT Enclaves/2022-03-12-E12-different.markdown
@@ -1,5 +1,6 @@
 ---
-layout:   post title:    "Different"
+layout:   post
+title:    "Different"
 subtitle: "AND THEN THEY WANT TO BURN YOU — E12"
 authors:  "Matt Perez"
 image:    "and-then-e12.png"
