--- a/_posts/rFiction/E11 The FIAT Enclaves/2022-03-12-E12-different.markdown
+++ b/_posts/rFiction/E11 The FIAT Enclaves/2022-03-12-E12-different.markdown
@@ -4,7 +4,7 @@ title:    "Different"
 subtitle: "AND THEN THEY WANT TO BURN YOU — E12"
 authors:  "Matt Perez"
 image:    "and-then-e12.png"
-unlisted: true
+hidden: true
 ---
 
 <div style="display: none;">
