--- a/_posts/rFiction/E01 First of Earth/2022-03-04-E04-a-fear-fest.markdown
+++ b/_posts/rFiction/E01 First of Earth/2022-03-04-E04-a-fear-fest.markdown
@@ -4,7 +4,7 @@ title:    "A Fear Fest"
 subtitle: "AND THEN THEY WANT TO BURN YOU — E04"
 authors:  "Matt Perez & Adrian Perez"
 image:    "and-then-e04.png"
-unlisted: true
+hidden:   true
 ---
 
 <div style="display: none;">
