--- a/_posts/rCompanies/PRADERA MEDIA/2022-04-06-rPlayGym.markdown
+++ b/_posts/rCompanies/PRADERA MEDIA/2022-04-06-rPlayGym.markdown
@@ -267,6 +267,12 @@ image:    "pradera-background.svg"
   </p>
  <p>The activities are not only technical and may include many other topics, including mental health, self-care, and holding on to your chicken.</p>
 
+<h1 style="font-size:50px; font-family:Courier New, monospace; text-align:center; margin: 60 0 20 0; ">Endnotes<h1>
+ <h6 id="en01">1. 	<a href="#id01">n</a> So-called “10x developers,” “super leads,” “genius developers,” etc.</h6>
+ <h6 id="en02">2. 	<a href="#id02">n</a> For more information, see Moneyball &lt;<a href="https://radicals.world/oQmxC7">https://radicals.world/oQmxC7</a>></h6>
+ <h6 id="en03">3. 	<a href="#id03">n</a> MLB Farm System Ranking Factors &lt;<a href="https://radicals.world/ATiAcH">https://radicals.world/ATiAcH</a>> (alt., <a href="https://diigo.com/0jwkj3">https://diigo.com/0jwkj3</a>).</h6>
+ <h6 id="en04">4. 	<a href="#id04">n</a> Kimberly Wiefling’s profile, &lt;<a href="https://radicals.world/zHL0lt">https://radicals.world/zHL0lt</a>></h6>
+
 <h1 style="font-size:50px; font-family:Courier New, monospace; text-align:center; margin: 60 0 20 0; ">APPENDICES</h1>
 
 <h1 style="font-size:40px; font-family:Courier New, monospace; ">Recruiting</h1>
@@ -359,10 +365,52 @@ image:    "pradera-background.svg"
  <p>The “chicken” comes from an illustration that Kimberly Wiefling<sup id="id04"><a href="#en04">4</a></sup> uses in her workshops where she holds a rubber chicken up over her head, let go of it, and let it fall to the floor. Then she asks, “what happened to the chicken?” The responses are usually all over the place, but every so often a small voice says, “… because you let it go of it?” And that’s the point: you let go of your power, your essence, to others. And those more powerful than you grab it as soon as you let go of it.</p>
  <p>We learn this habit at home, when we are little. We let our caretakers guide our chickens as they teach us the basics of staying alive. Once we enter school, most of our teachers, unfortunately, take our chickens from us outright. “You must learn discipline,” they tell us, “and I’ll tell you how to behave.” Throughout school we learn that obedience comes first: if we don’t please the teacher, we don’t get the sticker, or, worse, we are sent to the Principal’s office. Finally, we reach college, but by then the habit is deeply ingrained. Undergraduates are like high-schoolers with a bit more freedom outside of school, but in school it is a game of pleasing the professor and getting good grades. Grad students are often referred to as “slave labor” for their supervisors. By the time we start to work, we are fully conditioned to hand our chickens to our superiors, “Where do I sit? What team am I in? What do you want me to do, boss?”We have to grow out of the habit of letting go of our chicken. We need to learn to hold on to it. In fact, we can make companies better all around by holding on to our chicken. We can collaborate more openly, experiment more, innovate more, come up with outside-the-box solutions more often. We can bring our full selves to work, take off our masks, and stop holding back. We can bring real value as we create with others.</p>
  <p>Ideally, we would not learn the habit of giving up our chicken so easily in the first place, but at our workplaces we can certainly replace that terrible habit with the habit of holding on to our chicken.</p>
- 
-<h1 style="font-size:50px; font-family:Courier New, monospace; text-align:center; margin: 60 0 20 0; ">Endnotes<h1>
- <h6 id="en01">1. 	<a href="#id01">n</a> So-called “10x developers,” “super leads,” “genius developers,” etc.</h6>
- <h6 id="en02">2. 	<a href="#id02">n</a> For more information, see Moneyball &lt;<a href="https://radicals.world/oQmxC7">https://radicals.world/oQmxC7</a>></h6>
- <h6 id="en03">3. 	<a href="#id03">n</a> MLB Farm System Ranking Factors &lt;<a href="https://radicals.world/ATiAcH">https://radicals.world/ATiAcH</a>> (alt., <a href="https://diigo.com/0jwkj3">https://diigo.com/0jwkj3</a>).</h6>
- <h6 id="en04">4. 	<a href="#id04">n</a> Kimberly Wiefling’s profile, &lt;<a href="https://radicals.world/zHL0lt">https://radicals.world/zHL0lt</a>></h6>
 
+<h1 style="font-size:50px; font-family:Courier New, monospace; text-align:center; margin: 60 0 20 0; ">RELATED</h1>
+ <ul>
+  <li>RADICAL COMPANIES,</li>
+  <ul>
+    <li><a>EN</a>: <a></a></li>
+    <li><a>ES</a>: <a></a></li>
+    <li>For the Impatient: RADs, PRI, etc.: <a></a></li>
+    <li>Frequently asked questions (FAQ): <a></a></li>
+  </ul>
+  <li>The Missing Chapters,</li>
+  <ul>
+    <li><a>RADICAL COIN</a></li>
+    <li><a>RADICAL LAND</a></li>
+    <li><a>RADICAL GOVERNMENT</a></li> 
+  </ul>
+  <li>rCompanies</li>
+  <ul>
+    <li>rPRADERA MEDIA</li>
+    <ul>
+      <li><a>PRADERA SHELF</a></li>
+      <li><a>PRADERA READER</a></li>
+      <li><a>RADICALS.LIVE!</a></li>
+      <li><a>RADICAL MBA</a></li>  
+    </ul>
+    <li><a>rHatchery</a></li>
+    <li><a>rCircuit</a></li>
+    <li><a>rPlayGym</a></li>
+    <li><a>rEnsemble</a></li>
+    <ul>
+      <li><a>rTranslate</a></li>
+      <li><a>rSparkle</a></li>
+      <li><a>rStayHome</a></li>
+      <li><a>KidsCare</a></li>
+    </ul>
+  </ul>
+  <li>Startups</li>
+  <ul>
+    <li><a>rBuddyNeighbor</a></li>
+    <li><a>rNextBright</a></li>
+    <li><a>rHintersoft</a></li> 
+  </ul>
+  <li>rProjects</li>
+  <ul>
+    <li><a>REMARK!</a></li>
+    <li><a>RADs!</a></li>
+    <li><a>Attentive UI</a></li>
+  </ul>
+ </ul>
