--- a/_posts/rCompanies/PRADERA MEDIA/2022-04-06-rPlayGym.markdown
+++ b/_posts/rCompanies/PRADERA MEDIA/2022-04-06-rPlayGym.markdown
@@ -17,7 +17,6 @@ image:    "pradera-background.svg"
 
 <h1 style="font-size:40px; font-family:Courier New, monospace; ">Alignment</h1>
  <table style="font-size:smaller; margin-bottom:10px; ">
-  <!---->
   <tr style="vertical-align:text-top; ">
    <td style="padding-right:1em; width:1.25in; ">
     <p style="text-align:middle; font-weight:bold; font-size:larger; ">Impact</p>
@@ -32,7 +31,6 @@ image:    "pradera-background.svg"
     </ul>
    </td>
   </tr>
-  <!---->
   <tr style="vertical-align:text-top; ">
    <td style="padding-right:1em; ">
     <p style="text-align:middle; font-weight:bold; font-size:larger; ">Purpose</p>
@@ -48,14 +46,12 @@ image:    "pradera-background.svg"
     </ul>
    </td>
   </tr>
-  <!----> 
   <tr style="vertical-align:text-top; ">
    <td style="padding-right:1em; ">
     <p style="text-align:middle; font-weight:bold; font-size:larger; ">Mission</p>
    </td>
    <td style="font-size:7px; ">&nbsp;</td>
   </tr>
-  <!---->
   <tr style="vertical-align:text-top; padding-right:1em; ">
    <td style="border-right:1px solid black; text-align:right; padding-right:1em; ">What?</td>
    <td>
@@ -72,7 +68,6 @@ image:    "pradera-background.svg"
     </ul>
    </td>
   </tr>
-  <!---->
   <tr style="vertical-align:text-top; padding-right:1ex; ">
    <td style="border-right:1px solid black; text-align:right; padding-right:1em; ">When?</td>
    <td>
@@ -366,51 +361,51 @@ image:    "pradera-background.svg"
  <p>We learn this habit at home, when we are little. We let our caretakers guide our chickens as they teach us the basics of staying alive. Once we enter school, most of our teachers, unfortunately, take our chickens from us outright. “You must learn discipline,” they tell us, “and I’ll tell you how to behave.” Throughout school we learn that obedience comes first: if we don’t please the teacher, we don’t get the sticker, or, worse, we are sent to the Principal’s office. Finally, we reach college, but by then the habit is deeply ingrained. Undergraduates are like high-schoolers with a bit more freedom outside of school, but in school it is a game of pleasing the professor and getting good grades. Grad students are often referred to as “slave labor” for their supervisors. By the time we start to work, we are fully conditioned to hand our chickens to our superiors, “Where do I sit? What team am I in? What do you want me to do, boss?”We have to grow out of the habit of letting go of our chicken. We need to learn to hold on to it. In fact, we can make companies better all around by holding on to our chicken. We can collaborate more openly, experiment more, innovate more, come up with outside-the-box solutions more often. We can bring our full selves to work, take off our masks, and stop holding back. We can bring real value as we create with others.</p>
  <p>Ideally, we would not learn the habit of giving up our chicken so easily in the first place, but at our workplaces we can certainly replace that terrible habit with the habit of holding on to our chicken.</p>
 
-<h1 style="font-size:50px; font-family:Courier New, monospace; text-align:center; margin: 60 0 20 0; ">RELATED</h1>
+<h1 style="font-size:50px; font-family:Courier New, monospace; text-align:center; margin: 60px 0 20px 0; ">RELATED</h1>
  <ul>
-  <li>RADICAL COMPANIES,</li>
+  <li><span style="font-size:smaller; ">RADICAL</span> COMPANIES,</li>
   <ul>
-    <li><a>EN</a>: <a></a></li>
-    <li><a>ES</a>: <a></a></li>
-    <li>For the Impatient: RADs, PRI, etc.: <a></a></li>
-    <li>Frequently asked questions (FAQ): <a></a></li>
+    <li><a>EN</a>: <a href="">&hellip;</a></li>
+    <li><a>ES</a>: <a href="">&hellip;/</a>></li>
+    <li>For the Impatient: <a href="https://radicalcompanies.com/2022/05/04/RADICAL-COMPANIES-impatient">&hellip;/RADICAL-COMPANIES-impatient</a>></li>
+    <li>Frequently Asked Questions (FAQ): <a href="https://radicalcompanies.com/2022/05/05/RADICAL-COMPANIES-faq"">&hellip;/RADICAL-COMPANIES-faq"</a></li>
   </ul>
   <li>The Missing Chapters,</li>
   <ul>
-    <li><a>RADICAL COIN</a></li>
-    <li><a>RADICAL LAND</a></li>
-    <li><a>RADICAL GOVERNMENT</a></li> 
+    <li>RADICAL COIN: <a href="https://radicalcompanies.com/2022/05/07/RADICAL-coins"">&hellip;/RADICAL-coins"</a></li>
+    <li>RADICAL Land: <a href="https://radicalcompanies.com/2022/05/08/RADICAL-land"">&hellip;/RADICAL-land"</a></li>
+    <li>RADICAL Government: <a href="https://radicalcompanies.com/2022/05/06/RADICAL-government"">&hellip;/RADICAL-government"</a></li>
   </ul>
   <li>rCompanies</li>
   <ul>
     <li>rPRADERA MEDIA</li>
     <ul>
-      <li><a>PRADERA SHELF</a></li>
-      <li><a>PRADERA READER</a></li>
-      <li><a>RADICALS.LIVE!</a></li>
-      <li><a>RADICAL MBA</a></li>  
+      <li>PRADERA Shelf: <a href="https://radicalcompanies.com/2022/04/02/PRADERA-Shelf"">&hellip;/PRADERA-Shelf"</a></li>
+      <li>PRADERA Reader: <a href="https://radicalcompanies.com/2022/04/01/PRADERA-Reader"">&hellip;/PRADERA-Reader"</a></li>
+      <li>RADICALS.LIVE!: <a href="https://radicalcompanies.com/2022/04/04/RADICALS-Live"">&hellip;/RADICALS-Live"</a></li>
+      <li>RADICAL MBA: <a href="https://radicalcompanies.com/2022/04/03/RADICAL-MBA"">&hellip;/RADICAL-MBA"</a></li>
     </ul>
-    <li><a>rHatchery</a></li>
-    <li><a>rCircuit</a></li>
-    <li><a>rPlayGym</a></li>
-    <li><a>rEnsemble</a></li>
+    <li>rHatchery: <a href="https://radicalcompanies.com/2022/05/16/rHatchery"">&hellip;/rHatchery"</a></li>
+    <li>rCircuit: <a href="https://radicalcompanies.com/2022/04/05/rCircuit"">&hellip;/rCircuit"</a></li>
+    <li>rPlayGym: <a href="https://radicalcompanies.com/2022/04/06/rPlayGym"">&hellip;/rPlayGym"</a></li>
+    <li>rEnsembles,
     <ul>
-      <li><a>rTranslate</a></li>
-      <li><a>rSparkle</a></li>
-      <li><a>rStayHome</a></li>
-      <li><a>KidsCare</a></li>
+      <li>rCORE: <a href="https://radicalcompanies.com/2022/05/15/rCORE"">&hellip;/rCORE"</a></li>
+      <li>rClean: <a href="https://radicalcompanies.com/2022/05/14/rClean"">&hellip;/rClean"</a></li>
+      <li>rStayHome: <a href="https://radicalcompanies.com/2022/05/12/rStayHome"">&hellip;/rStayHome"</a></li>
+      <li>rKidsCare: <a href="https://radicalcompanies.com/2022/05/13/rKidsKare"">&hellip;/rKidsKare"</a></li>
     </ul>
   </ul>
   <li>Startups</li>
   <ul>
-    <li><a>rBuddyNeighbor</a></li>
-    <li><a>rNextBright</a></li>
-    <li><a>rHintersoft</a></li> 
+    <li>rBuddyNeighbor: <a href="https://radicalcompanies.com/2022/05/20/rBuddyNeighbor"">&hellip;/rBuddyNeighbor"</a>></li>
+    <li>rNextBright: <a href="https://radicalcompanies.com/2022/05/22/rNextBright"">&hellip;/rNextBright"</a>></li>
+    <li>rHintersoft: <a href="https://radicalcompanies.com/2022/05/21/rHintersoft"">&hellip;/rHintersoft"</a>></li> 
   </ul>
   <li>rProjects</li>
   <ul>
-    <li><a>REMARK!</a></li>
-    <li><a>RADs!</a></li>
-    <li><a>Attentive UI</a></li>
+    <li>REMARK!: <a href="https://radicalcompanies.com/2022/05/18/REMARK"">&hellip;/REMARK"</a>></li>
+    <li>RADs!: <a href="https://radicalcompanies.com/2022/05/19/RADs!"">&hellip;/RADs!"</a>></li>
+    <li>Attentive UI: <a href="https://radicalcompanies.com/2022/05/17/attentive-ui.html">&hellip;attentive-ui.html</a>></li>
   </ul>
  </ul>
