--- a/_posts/rFiction/E01 First of Earth/2022-03-04-E04-a-fear-fest.markdown
+++ b/_posts/rFiction/E01 First of Earth/2022-03-04-E04-a-fear-fest.markdown
@@ -69,50 +69,51 @@ hidden:   true
   <li><a>Notes</a></li>
  </ul>
 
-<h2 style="margin-top:0.5in; ">RELATED</h1>
-<ul>
-  <li>RADICAL COMPANIES,</li>
+<h1 style="font-size:50px; font-family:Courier New, monospace; text-align:center; margin: 60px 0 20px 0; ">RELATED</h1>
+ <ul>
+  <li><span style="font-size:smaller; ">RADICAL</span> COMPANIES,</li>
   <ul>
-    <li><a href="">EN</a>: <a href="https://radicals.world/fDm2eL">https://radicals.world/fDm2eL</a></li>
-    <li><a href="">ES</a>: <a href="https://radicals.world/3BFuoJ">https://radicals.world/3BFuoJ</a></li>
-    <li>For the Impatient: RADs, PRI, etc.: <a href="https://radicals.world/Q0RIWR]">https://radicals.world/Q0RIWR]</a></li>
-    <li>Frequently asked questions (FAQ): <a href="https://radicals.world/ZVRbBc">https://radicals.world/ZVRbBc</a></li>
+    <li><a>EN</a>: <a href="">&hellip;</a></li>
+    <li><a>ES</a>: <a href="">&hellip;/</a>></li>
+    <li>For the Impatient: <a href="https://radicalcompanies.com/2022/05/04/RADICAL-COMPANIES-impatient">&hellip;/RADICAL-COMPANIES-impatient</a>></li>
+    <li>Frequently Asked Questions (FAQ): <a href="https://radicalcompanies.com/2022/05/05/RADICAL-COMPANIES-faq"">&hellip;/RADICAL-COMPANIES-faq"</a></li>
   </ul>
   <li>The Missing Chapters,</li>
   <ul>
-    <li><a href="https://radicalcompanies.com/2022/03/17/RADICAL-coins.html">RADICAL COIN</a></li>
-    <li><a href="https://radicalcompanies.com/2022/03/18/RADICAL-land.html">RADICAL LAND</a></li>
-    <li><a href="https://radicalcompanies.com/2022/03/19/RADICAL-government.html">RADICAL GOVERNMENT</a></li> 
+    <li>RADICAL COIN: <a href="https://radicalcompanies.com/2022/05/07/RADICAL-coins"">&hellip;/RADICAL-coins"</a></li>
+    <li>RADICAL Land: <a href="https://radicalcompanies.com/2022/05/08/RADICAL-land"">&hellip;/RADICAL-land"</a></li>
+    <li>RADICAL Government: <a href="https://radicalcompanies.com/2022/05/06/RADICAL-government"">&hellip;/RADICAL-government"</a></li>
   </ul>
   <li>rCompanies</li>
   <ul>
     <li>rPRADERA MEDIA</li>
     <ul>
-      <li><a href="https://radicalcompanies.com/2022/05/05/PRADERA-READER.html">PRADERA READER</a></li>
-      <li><a href="https://radicalcompanies.com/2022/05/06/PRADERA-SHELF.html">PRADERA SHELF</a></li>
-      <li><a href="https://radicalcompanies.com/2022/05/06/RADICAL-MBA.html">RADICAL MBA</a></li>  
-      <li><a href="https://radicalcompanies.com/2022/05/09/RADICALS-LIVE.html">RADICALS.LIVE!</a></li>
+      <li>PRADERA Shelf: <a href="https://radicalcompanies.com/2022/04/02/PRADERA-Shelf"">&hellip;/PRADERA-Shelf"</a></li>
+      <li>PRADERA Reader: <a href="https://radicalcompanies.com/2022/04/01/PRADERA-Reader"">&hellip;/PRADERA-Reader"</a></li>
+      <li>RADICALS.LIVE!: <a href="https://radicalcompanies.com/2022/04/04/RADICALS-Live"">&hellip;/RADICALS-Live"</a></li>
+      <li>RADICAL MBA: <a href="https://radicalcompanies.com/2022/04/03/RADICAL-MBA"">&hellip;/RADICAL-MBA"</a></li>
     </ul>
-    <li><a>rHatchery</a></li>
-    <li><a>rCircuit</a></li>
-    <li><a>rPlayGym</a></li>
-    <li><a>rEnsemble</a></li>
+    <li>rHatchery: <a href="https://radicalcompanies.com/2022/05/16/rHatchery"">&hellip;/rHatchery"</a></li>
+    <li>rCircuit: <a href="https://radicalcompanies.com/2022/04/05/rCircuit"">&hellip;/rCircuit"</a></li>
+    <li>rPlayGym: <a href="https://radicalcompanies.com/2022/04/06/rPlayGym"">&hellip;/rPlayGym"</a></li>
+    <li>rEnsembles,
     <ul>
-      <li><a>rTranslate</a></li>
-      <li><a>rSparkle</a></li>
-      <li><a>rStayHome</a></li>
-      <li><a>KidsCare</a></li>
+      <li>rCORE: <a href="https://radicalcompanies.com/2022/05/15/rCORE"">&hellip;/rCORE"</a></li>
+      <li>rClean: <a href="https://radicalcompanies.com/2022/05/14/rClean"">&hellip;/rClean"</a></li>
+      <li>rStayHome: <a href="https://radicalcompanies.com/2022/05/12/rStayHome"">&hellip;/rStayHome"</a></li>
+      <li>rKidsCare: <a href="https://radicalcompanies.com/2022/05/13/rKidsKare"">&hellip;/rKidsKare"</a></li>
     </ul>
   </ul>
   <li>Startups</li>
   <ul>
-    <li><a>rBuddyNeighbor</a></li>
-    <li><a>rNextBright</a></li>
-    <li><a>rHintersoft</a></li> 
+    <li>rBuddyNeighbor: <a href="https://radicalcompanies.com/2022/05/20/rBuddyNeighbor"">&hellip;/rBuddyNeighbor"</a>></li>
+    <li>rNextBright: <a href="https://radicalcompanies.com/2022/05/22/rNextBright"">&hellip;/rNextBright"</a>></li>
+    <li>rHintersoft: <a href="https://radicalcompanies.com/2022/05/21/rHintersoft"">&hellip;/rHintersoft"</a>></li> 
   </ul>
   <li>rProjects</li>
   <ul>
-    <li><a>REMARK!</a></li>
-    <li><a>RADs!</a></li>
-    <li><a>Attentive UI</a></li>
+    <li>REMARK!: <a href="https://radicalcompanies.com/2022/05/18/REMARK"">&hellip;/REMARK"</a>></li>
+    <li>RADs!: <a href="https://radicalcompanies.com/2022/05/19/RADs!"">&hellip;/RADs!"</a>></li>
+    <li>Attentive UI: <a href="https://radicalcompanies.com/2022/05/17/attentive-ui.html">&hellip;attentive-ui.html</a>></li>
   </ul>
+ </ul>
