--- a/_posts/Blog/2022-05-07-rcoins.markdown
+++ b/_posts/Blog/2022-05-07-rcoins.markdown
@@ -425,8 +425,8 @@ image:    "en-decentralized-minting.svg"
  <ul>
   <li><span style="font-size:smaller; ">RADICAL</span> COMPANIES,</li>
    <ul>
-    <li><a>EN</a>: <a href="#">&hellip;</a></li>
-    <li><a>ES</a>: <a href="#">&hellip;</a></li>
+    <li><a>EN</a>: <a href="https://radicalcompanies.com">&hellip;</a></li>
+    <li><a>ES</a>: <a href="https://radicalcompanies.com">&hellip;</a></li>
    </ul>
   <li>Blog posts,</li>
    <ul>
