--- a/_posts/Blog/2022-05-06-rgov.markdown
+++ b/_posts/Blog/2022-05-06-rgov.markdown
@@ -133,8 +133,8 @@ image:    "en-alignment.svg"
  <ul>
   <li><span style="font-size:smaller; ">RADICAL</span> COMPANIES,</li>
    <ul>
-    <li><a>EN</a>: <a href="https://radicalcompanies.com" target="blank">&hellip;</a></li>
-    <li><a>ES</a>: <a href="https://radicalcompanies.com" target="blank">&hellip;</a></li>
+    <li><a>EN</a>: <a href="https://radicalcompanies.com" target="blank">&hellip;/radicalcompanies.com [EN]</a></li>
+    <li><a>ES</a>: <a href="https://radicalcompanies.com" target="blank">&hellip;/radicalcompanies.com [ES]</a></li>
    </ul>
   <li>Blog posts,</li>
    <ul>
