--- a/_posts/Blog/2022-08-20-rMake.markdown
+++ b/_posts/Blog/2022-08-20-rMake.markdown
@@ -80,18 +80,18 @@ image:    "about-daos.svg"
    </ul>
    <li>The Missing Chapters,</li>
     <ul>
-     <li>rCOIN: <a href="https://radicalcompanies.com/2022/05/07/rcoins.html" target="_blank">&hellip;/rcoin</a></li>
-     <li>rLand: <a href="https://radicalcompanies.com/2022/05/08/rland.html" target="_blank">&hellip;/rland</a></li>
-     <li>rGov: <a href="https://radicalcompanies.com/2022/05/06/rgov.html" target="_blank">&hellip;/rgov</a></li>
+     <li>RADICAL COIN: <a href="https://radicalcompanies.com/2022/05/07/rcoins" target="_blank">&hellip;/rcoins</a></li>
+     <li>RADICAL Land: <a href="https://radicalcompanies.com/2022/05/08/rland" target="_blank">&hellip;/rland</a></li>
+     <li>RADICAL Government: <a href="https://radicalcompanies.com/2022/05/06/rgovernment" target="_blank">&hellip;/rgovernment</a></li>
     </ul>
    <li>rCompanies</li>
     <ul>
-     <li>rMedia,</li>
+     <li>rPRADERA MEDIA,</li>
       <ul>
-       <li>PRADERA Shelf: <a href="https://radicalcompanies.com/2022/04/02/rShelf" target="_blank">&hellip;/rShelf</a></li>
-       <li>PRADERA Reader: <a href="https://radicalcompanies.com/2022/04/01/rReader" target="_blank">&hellip;/rReader</a></li>
-       <li>RADICALS.LIVE!: <a href="https://radicalcompanies.com/2022/04/04/rLive" target="_blank">&hellip;/rLive</a></li>
-       <li>RADICAL MBA: <a href="https://radicalcompanies.com/2022/04/03/rMBA" target="_blank">&hellip;/rMBA</a></li>
+       <li>PRADERA Shelf: <a href="https://radicalcompanies.com/2022/04/02/PRADERA-Shelf" target="_blank">&hellip;/PRADERA-Shelf</a></li>
+       <li>PRADERA Reader: <a href="https://radicalcompanies.com/2022/04/01/PRADERA-Reader" target="_blank">&hellip;/PRADERA-Reader</a></li>
+       <li>RADICALS.LIVE!: <a href="https://radicalcompanies.com/2022/04/04/RADICALS-Live" target="_blank">&hellip;/RADICALS-Live</a></li>
+       <li>RADICAL MBA: <a href="https://radicalcompanies.com/2022/04/03/RADICAL-MBA" target="_blank">&hellip;/RADICAL-MBA</a></li>
       </ul>
      <li>rHatchery: <a href="https://radicalcompanies.com/2022/05/16/rHatchery" target="_blank">&hellip;/rHatchery</a> <span style="font-weight:bold; ">[Under development]</span></li>
      <li>rCircuit: <a href="https://radicalcompanies.com/2022/04/05/rCircuit" target="_blank">&hellip;/rCircuit</a></li>
@@ -101,7 +101,7 @@ image:    "about-daos.svg"
        <li>rCORE: <a href="https://radicalcompanies.com/2022/05/15/rCORE" target="_blank">&hellip;/rCORE</a> <span style="font-weight:bold; ">[Under development]</span></li>
        <li>rClean: <a href="https://radicalcompanies.com/2022/05/14/rClean" target="_blank">&hellip;/rClean</a></li>
        <li>rStayHome: <a href="https://radicalcompanies.com/2022/05/12/rStayHome" target="_blank">&hellip;/rStayHome</a></li>
-       <li>rKare: <a href="https://radicalcompanies.com/2022/05/13/rKare" target="_blank">&hellip;/rKare</a></li>
+       <li>rKidsCare: <a href="https://radicalcompanies.com/2022/05/13/rKidsKare" target="_blank">&hellip;/rKidsKare</a></li>
       </ul>
     </ul>
   <li>rStartups,</li>
@@ -117,3 +117,5 @@ image:    "about-daos.svg"
     <li>Attentive UI: <a href="https://radicalcompanies.com/2022/05/17/attentive-ui.html" target="_blank">&hellip;attentive-ui.html</a></li>
    </ul>
  </ul>
+
+
