--- a/_posts/rCompanies/rEnsembles/2022-05-14-rClean.markdown
+++ b/_posts/rCompanies/rEnsembles/2022-05-14-rClean.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "rClean"
 subtitle: "From Gig Subsistence to Co-Onwership"
 authors:  "Jose Leal, Matt Perez"
-image:    "pradera-background.svg"
+image:    "rMEDIA.svg"
 ---
 
 <div style="display: none; ">
