image:    "rmedia-icon.svg"

--- a/_posts/rCompanies/rMEDIA/2022-04-04-rLive.markdown
+++ b/_posts/rCompanies/rMEDIA/2022-04-04-rLive.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "rLIVE"
 subtitle: "Iconoclasts in conversations!"
 authors:  "Matt Perez"
-image:    "rMEDIA.svg"
+image:    "rmedia-icon.svg"
 ---
 
 <div style="display: none;">
