--- a/_posts/rCompanies/rMEDIA/2022-04-05-rCircuit.markdown
+++ b/_posts/rCompanies/rMEDIA/2022-04-05-rCircuit.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "rCircuit"
 subtitle: "Growth in the RADICAL Model!"
 authors:  "Matt Perez"
-image:    "rMEDIA.svg"
+image:    "rmedia-icon.svg"
 ---
 
 <div style="display: none; ">
