--- a/_posts/rCompanies/rMEDIA/2022-04-01-rReader.markdown
+++ b/_posts/rCompanies/rMEDIA/2022-04-01-rReader.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "rReader"
 subtitle: "An rMEDIA Reader"
 authors:  "Matt Perez"
-image:    "rMEDIA.svg"
+image:    "rmedia-icon.svg"
 ---
 
 <div style="display: none;">
