--- a/_posts/rCompanies/rMEDIA/2022-04-02-rShelf.markdown
+++ b/_posts/rCompanies/rMEDIA/2022-04-02-rShelf.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "rShelf"
 subtitle: "A PRADERA MEDIA Promotional Prop"
 authors:  "Matt Perez"
-image:    "rMEDIA.svg"
+image:    "rmedia-icon.svg"
 ---
 
 <div style="display: none;">
