--- a/_posts/rCompanies/rMEDIA/2022-04-03-rMBA.markdown
+++ b/_posts/rCompanies/rMEDIA/2022-04-03-rMBA.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "rMBA"
 subtitle: "Learn Co-ownership and Co-management"
 authors:  "Matt Perez"
-image:    "rMEDIA.svg"
+image:    "rmedia-icon.svg"
 ---
 
 <div style="display: none;">
