--- a/_posts/rCompanies/rMEDIA/2022-08-20-rmedia.markdown
+++ b/_posts/rCompanies/rMEDIA/2022-08-20-rmedia.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "rMEDIA"
 subtitle: "Publishing and Promotion in the RADICAL Model"
 authors:  "Matt Perez"
-image:    "rMEDIA.svg"
+image:    "rmedia-icon.svg"
 ---
 
 <div style="display: none;">
