--- a/_posts/rProjects/2022-05-18-REMARK.markdown
+++ b/_posts/rProjects/2022-05-18-REMARK.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "Remark!"
 subtitle: "Tangible Feedback (API)"
 authors:  "Matt Perez"
-image:    "pradera-background.svg"
+image:    "rmedia-icon.svg"
 ---
 
 <div style="display: none; ">
