--- a/_posts/rProjects/2022-05-19-RADs!.markdown
+++ b/_posts/rProjects/2022-05-19-RADs!.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "RADs!"
 subtitle: "Making It Easy to Give and Recieve RADs (app)"
 authors:  "Matt Perez"
-image:    "pradera-background.svg"
+image:    "rmedia-icon.svg"
 ---
 
 <div style="display: none; ">
