--- a/_posts/rFiction/E01 First of Earth/2022-03-04-E04-a-fear-fest.markdown
+++ b/_posts/rFiction/E01 First of Earth/2022-03-04-E04-a-fear-fest.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "A Fear Fest"
 subtitle: "AND THEN THEY WANT TO BURN YOU — E04"
 authors:  "Matt Perez & Adrian Perez"
-image:    "icon-and-then-e04.png"
+image:    "icon-e04-and-then.png"
 hidden:   true
 ---
 
