--- a/_posts/rFiction/E11 The FIAT Enclaves/2022-03-12-E12-different.markdown
+++ b/_posts/rFiction/E11 The FIAT Enclaves/2022-03-12-E12-different.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "Different"
 subtitle: "AND THEN THEY WANT TO BURN YOU — E12"
 authors:  "Matt Perez"
-image:    "icon-and-then-e12.png"
+image:    "icon-e12-and-then.png"
 hidden:   true
 ---
 
