--- a/_posts/rMedia/2022-04-04-rlive.markdown
+++ b/_posts/rMedia/2022-04-04-rlive.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "rLIVE"
 subtitle: "Iconoclasts in conversations!"
 authors:  "Matt Perez"
-image:    "rmedia-icon.svg"
+image:    "icon-rmedia.svg"
 ---
 
 <div style="display: none;">
