--- a/_posts/rMedia/2022-04-05-rcircuit.markdown
+++ b/_posts/rMedia/2022-04-05-rcircuit.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "rCircuit"
 subtitle: "Growth in the RADICAL Model!"
 authors:  "Matt Perez"
-image:    "rmedia-icon.svg"
+image:    "icon-rmedia.svg"
 ---
 
 <div style="display: none; ">
