--- a/_posts/rMedia/2022-04-07-rmedia.markdown
+++ b/_posts/rMedia/2022-04-07-rmedia.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "rMEDIA"
 subtitle: "Publishing and Promotion in the RADICAL Model"
 authors:  "Matt Perez"
-image:    "rmedia-icon.svg"
+image:    "icon-rmedia.svg"
 ---
 
 <div style="display: none;">
