icon name change

--- a/_posts/rProjects/2022-05-20-rmake.markdown
+++ b/_posts/rProjects/2022-05-20-rmake.markdown
@@ -3,7 +3,7 @@ layout:   post
 title:    "rMAKE"
 subtitle: "Making Books Like We Make Software"
 authors:  "Matt Perez"
-image:    "rmake-icon.svg"
+image:    "icon-rmedia.svg"
 ---
 
 <div style="display:none;">
