--- a/_posts/rCompanies/2022-05-13-rKare.markdown
+++ b/_posts/rCompanies/2022-05-13-rKare.markdown
@@ -10,7 +10,7 @@ image:    "icon-rmedia.svg"
  <p>Taking care of children with or without the parents' help, while their parents are at busy with something else (<em>e.g.</em> their FIAT work).</p>
 </div>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; ">Alignment</h1>
+<h1>Alignment</h1>
  <table>
  <tbody style="font-size:smaller; vertical-align:top; ">
   <tr>
@@ -68,14 +68,14 @@ image:    "icon-rmedia.svg"
  </tbody>
 </table>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; margin-top:30px; ">Intro</h1>
+<h1>Intro</h1>
  <p>Taking care of children with or without the parents' help, while their parents are at busy with something else (<em>e.g.</em> their FIAT work).</p>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; margin-top:30px; ">Origin Story</h1>
+<h1>Origin Story</h1>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; margin-top:30px; ">How It Works</h1>
+<h1>How It Works</h1>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; margin-top:30px; ">What's in It for &hellip;?</h1>
+<h1>What's in It for &hellip;?</h1>
 
 <h1 class="_section">RELATED</h1>
  <ul>
