--- a/_posts/rCompanies/2022-05-15-rCORE.markdown
+++ b/_posts/rCompanies/2022-05-15-rCORE.markdown
@@ -10,7 +10,7 @@ image:    "icon-rmedia.svg"
  <p>Transforming an interpretation service to the <span style="font-size:smaller; ">RADICAL COMPANIES</span> foundation. This could be the &ldquo;templace&&rdquo; for other &ldquo;gig&rdquo; business.</p>
 </div>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; ">Alignment</h1>
+<h1>Alignment</h1>
  <table>
  <tbody style="font-size:smaller; vertical-align:top; ">
   <tr>
@@ -68,14 +68,14 @@ image:    "icon-rmedia.svg"
  </tbody>
 </table>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; margin-top:30px; ">Intro</h1>
+<h1>Intro</h1>
  <p>Transforming an interpretation service to the <span style="font-size:smaller; ">RADICAL COMPANIES</span> foundation. This could be the &ldquo;templace&&rdquo; for other &ldquo;gig&rdquo; business.</p>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; margin-top:30px; ">Origin Story</h1>
+<h1>Origin Story</h1>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; margin-top:30px; ">How It Works</h1>
+<h1>How It Works</h1>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; margin-top:30px; ">What's in It for &hellip;?</h1>
+<h1>What's in It for &hellip;?</h1>
 
 <h1 class="_section">RELATED</h1>
  <ul>
